; ModuleID = '/home/carl/AnghaBench/8cc/test/extr_array.c_t3.c'
source_filename = "/home/carl/AnghaBench/8cc/test/extr_array.c_t3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @t3 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @t3() #0 {
  %1 = alloca [4 x [5 x i32]], align 16
  %2 = alloca i32*, align 8
  %3 = getelementptr inbounds [4 x [5 x i32]], [4 x [5 x i32]]* %1, i64 0, i64 0
  %4 = bitcast [5 x i32]* %3 to i32*
  store i32* %4, i32** %2, align 8
  %5 = getelementptr inbounds [4 x [5 x i32]], [4 x [5 x i32]]* %1, i64 0, i64 0
  %6 = getelementptr inbounds [5 x i32], [5 x i32]* %5, i64 1
  %7 = getelementptr inbounds [5 x i32], [5 x i32]* %6, i64 0, i64 0
  %8 = getelementptr inbounds i32, i32* %7, i64 2
  store i32 62, i32* %8, align 4
  %9 = load i32*, i32** %2, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 7
  %11 = load i32, i32* %10, align 4
  %12 = call i32 (i32, i32, ...) bitcast (i32 (...)* @expect to i32 (i32, i32, ...)*)(i32 62, i32 %11)
  ret void
}

declare dso_local i32 @expect(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
